# movie-ratings-app

./: .env.docker  .env.local  .env.test-dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
docs/: index.md
init_db/: init_data.sql  init_databases.sql
src/app/: __init__.py  context.py  dependencies.py  exception_handlers.py  exceptions.py  main.py  settings.py
src/app/api/: api.py  openapi.py
src/app/api/endpoints/: health.py  meta.py
src/app/api/endpoints/v1/: __init__.py  movie.py  profile.py  rating.py  user.py
src/app/config/: logging_container.conf  uvicorn_settings.py
src/app/database/: base.py  base_model.py  models.py
src/app/database/alembic/: env.py
src/app/database/alembic/versions/: 2025_05_31_1557-f33506c5286e_initial_tables.py
src/app/domain/repositories/: base_repository.py  movie_repository.py  rating_repository.py  user_repository.py
src/app/schemas/: __init__.py  endpoints.py  error_codes.py  error_response.py
src/tests/: conftest.py
src/tests/app/: test_test.py
src/tests/app/endpoints/: health_test.py  meta_test.py
src/tests/integration/: conftest.py  movie_test.py  rating_test.py  user_test.py
