[tool.poetry]
name = "movie_ratings_app"
version = "0.1.1"
description = ""
authors = [
  "Nikita <nikitazavartsev@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
structlog = "^25.3.0"
mock = "^5.1.0"
alembic = "^1.16.1"
python-dotenv = "^1.1.0"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.41"}
pydantic-settings = "^2.9.1"
pydantic = "^2.11.5"
asyncpg = "^0.30.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ipdb = "^0.13.13"
pre-commit = "^4.2.0"
autoflake = ">=2.3.1"
pytest = "^8.3.5"
pytest-asyncio = ">=1.0.0"
pytest-cov = "^6.1.1"
pytest-xdist = "^3.7.0"
pytest-dotenv = "^0.5.2"
asgi-lifespan = "^2.1.0"
pytest-structlog = "^1.1"
python-json-logger = "^2.0.7"

[tool.black]
line-length = 90
target-version = ['py312']
include = '\.pyi?$'


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "**/alembic/**/*.py",
    "**/config/**/*.py",
    "**/tests/**/*.py",
    "**/src/app/dependencies.py",
    "**/src/app/settings.py",
    "**/src/app/context.py",
    "**/src/app/api/api.py",
    "**/src/app/api/openapi.py",
    "**/src/app/api/endpoints/health.py",
    "**/src/app/api/endpoints/meta.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
